--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "17.0.2",
     "react-native": "0.67.2",
     "react-native-chart-kit": "^6.12.0",
+    "react-native-document-picker": "^8.0.0",
     "react-native-elements": "^3.4.2",
     "react-native-gesture-handler": "^2.2.0",
     "react-native-pager-view": "^5.4.9",
